[gd_scene load_steps=20 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Characters/Damage/tank_explosion2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Damage/tank_explosion3.png" type="Texture" id=3]
[ext_resource path="res://Characters/Damage/tank_explosion4.png" type="Texture" id=4]
[ext_resource path="res://Characters/Player/playerShip1_blue.png" type="Texture" id=5]
[ext_resource path="res://Audio/sfx_lose.ogg" type="AudioStream" id=6]
[ext_resource path="res://User Interface/Kenney Future.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Characters/Player/Pause.gd" type="Script" id=8]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio/sfx_laser1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Backgrounds/blue.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Destroyed",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = -41.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 32.0
height = 0.0

[sub_resource type="CircleShape2D" id=8]
radius = 29.4284

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Normal"

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 100

[node name="Pause" type="Control" parent="PauseMenu"]
pause_mode = 2
editor/display_folded = true
visible = false
modulate = Color( 0, 0.858824, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Click" type="AudioStreamPlayer" parent="PauseMenu/Pause"]
stream = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Pause/CenterContainer"]
margin_left = 465.0
margin_top = 263.0
margin_right = 559.0
margin_bottom = 337.0

[node name="Title" type="Label" parent="PauseMenu/Pause/CenterContainer/VBoxContainer"]
margin_right = 94.0
margin_bottom = 18.0
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="PauseMenu/Pause/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 46.0
text = "Resume"

[node name="Quit" type="Button" parent="PauseMenu/Pause/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 94.0
margin_bottom = 74.0
text = "quit"

[node name="YouDied" type="CanvasLayer" parent="."]
layer = 99

[node name="YouDied" type="Control" parent="YouDied"]
editor/display_folded = true
visible = false
modulate = Color( 0, 0.858824, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="YouDied/YouDied"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="YouDied/YouDied/CenterContainer"]
margin_left = 468.0
margin_top = 263.0
margin_right = 555.0
margin_bottom = 337.0

[node name="Title" type="Label" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_right = 87.0
margin_bottom = 18.0
text = "You Died"

[node name="Retry" type="Button" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 87.0
margin_bottom = 46.0
text = "Retry"

[node name="Quit2" type="Button" parent="YouDied/YouDied/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 87.0
margin_bottom = 74.0
text = "Quit"

[node name="Trail" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 10
speed_scale = 2.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0, -256 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -48 )

[node name="Timer" type="Timer" parent="."]

[node name="HitArea" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="HitArea"]
visible = false
shape = SubResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
visible = false
motion_mirroring = Vector2( 256, 256 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 11 )
centered = false

[node name="Background2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 256, 0 )
texture = ExtResource( 11 )
centered = false

[node name="Background3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 0 )
texture = ExtResource( 11 )
centered = false

[node name="Background4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 768, 0 )
texture = ExtResource( 11 )
centered = false

[node name="Background5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 768, 256 )
texture = ExtResource( 11 )
centered = false

[node name="Background6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 256 )
texture = ExtResource( 11 )
centered = false

[node name="Background7" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 256, 256 )
texture = ExtResource( 11 )
centered = false

[node name="Background8" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 256 )
texture = ExtResource( 11 )
centered = false

[node name="Background9" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 512 )
texture = ExtResource( 11 )
centered = false

[node name="Background10" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 256, 512 )
texture = ExtResource( 11 )
centered = false

[node name="Background11" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 512 )
texture = ExtResource( 11 )
centered = false

[node name="Background12" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 768, 512 )
texture = ExtResource( 11 )
centered = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="pressed" from="PauseMenu/Pause/CenterContainer/VBoxContainer/Resume" to="PauseMenu/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Pause/CenterContainer/VBoxContainer/Quit" to="PauseMenu/Pause" method="_on_Quit_pressed"]
[connection signal="pressed" from="PauseMenu/Pause/CenterContainer/VBoxContainer/Quit" to="PauseMenu/Pause" method="_on_Return_pressed"]
[connection signal="visibility_changed" from="YouDied/YouDied" to="PauseMenu/Pause" method="_on_YouDied_visibility_changed"]
[connection signal="pressed" from="YouDied/YouDied/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="YouDied/YouDied/CenterContainer/VBoxContainer/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
